<resources>
    <string name="app_name">냉좀비</string>
    <string name="strUsername">Username</string>
    <string name="strID">아이디</string>
    <string name="strPW">비밀번호</string>
    <string name="strLogin">로그인</string>
    <string name="strLogout">로그아웃</string>
    <string name="strSignup">회원가입</string>
    <string name="strEditUserInfo">회원 정보 수정</string>
    <string name="strEdit">수정</string>
    <string name="strCheck">확인</string>
    <string name="strRegister">등록</string>
    <string name="strCancel">취소</string>
    <string name="anotherRecipeMsg">원하는 레시피가 없나요? (외부사이트 검색)</string>
    <string name="foodName">음식 이름</string>
    <string name="ingredients">식재료</string>
    <string name="ingPrice">식재료 가격</string>
    <string name="ingredi">재료</string>
    <string name="person">인원</string>
    <string name="time">시간</string>
    <string name="recipe">레시피</string>
    <string name="strRecipe">요리 방법</string>
    <string name="setting">설정</string>
    <string name="comment">댓글</string>
    <string name="like">좋아요</string>
    <string name="notice">알림</string>
    <string name="withdraw">탈퇴하기</string>
    <string name="profile">회원 정보</string>
    <string name="mycontents">내 컨텐츠 관리</string>
    <string name="recipeInfo">요리 정보</string>
    <string name="recipePrice">식재료가격</string>
    <string name="userInf">회원정보</string>
    <string name="myRecipe">내 레시피</string>
    <string name="myComment">내 댓글</string>
    <string name="myLike">내가 좋아요 한 레시피</string>
    <string name="bestRecipe">이 달의 추천 레시피</string>
    <string name="alarmList">알림 목록</string>
</resources>