<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/strSignup"
        android:textColor="@color/colorSky"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/strID"
        android:inputType="textCapWords"
        android:maxLength="10"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/strPW"
        android:inputType="textPassword"
        android:maxLength="15"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16sp" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/strCheck"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/strCancel"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

    <!--
        <TextView
            android:id="@+id/already_user"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/strCheck"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/already_user2"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/strCancel"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        -->

</LinearLayout>