<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <!--  android:scaleType="fitCenter"  은 이미지를 공간에 맞게 비율맞춰서 줄이는 코멘트임-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSky"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/profile"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13269494" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/recipeInquireBtn"
                android:layout_width="96dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:maxWidth="35dp"
                android:maxHeight="35dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/recipes" />

            <ImageButton
                android:id="@+id/commentInquireBtn"
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/comment" />

            <ImageButton
                android:id="@+id/likeInquireBtn"
                android:layout_width="116dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/like" />

            <ImageButton
                android:id="@+id/settingBtn"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/settings" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/recipe"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/comment"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/like"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/setting"
                android:textSize="20dp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/strID"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/userIdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="jaehe"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/strPW"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/userPwTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="20170466"
                android:textSize="20dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSky"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/mycontents"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageButton
        android:id="@+id/memberEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@color/colorSky"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/edit_icon" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="142dp"
        android:layout_height="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_background"
        android:text="로그아웃"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>