<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".main.RecipeDetailCreateView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <EditText
            android:id="@+id/et_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/foodName"
            android:inputType="textPersonName" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FF686868"/>


        <ImageView
            android:id="@+id/image_recipeDetail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            app:srcCompat="@android:drawable/ic_menu_gallery" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FF686868"/>

        <!-- 요리 정보 -->
        <LinearLayout
            android:id="@+id/recipeInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/recipeInfo"
                />

            <LinearLayout
                android:id="@+id/recipeInfoPersonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">


                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="#ff000000"
                    android:text="@string/person"
                    />
                <EditText
                    android:id="@+id/et_info_personCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textSize="17sp"
                    android:hint="ex) 3"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/recipeInfoTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="#ff000000"
                    android:text="@string/time"
                    />
                <EditText
                    android:id="@+id/et_info_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textSize="17sp"
                    android:hint="ex) 30분 -> 30"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FF686868"/>
        </LinearLayout>

        <!--재료 -->
        <LinearLayout
            android:id="@+id/recipeIngredientLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:text="@string/ingredi"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!---재료 동적추가-->
            <LinearLayout
                android:id="@+id/ingredientsLayout_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_updateLayout_addIngredient"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/add" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FF686868"/>

        <!--요리 방법 -->
        <LinearLayout
            android:id="@+id/recipeContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="25dp"
                android:text="@string/strRecipe"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/recipeContentLayout_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_updateLayout_addRecipe"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/add"/>


        <Button
            android:id="@+id/btn_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSky"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="수정" />

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSky"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/strCancel"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
